# Peg-Solitair

./: CMakeLists.txt  README.md  Readme.txt  main.cpp  peg_solitaire.cpp  peg_solitaire.h
